[gd_scene load_steps=18 format=3 uid="uid://clht32bvehj4w"]

[ext_resource type="Script" uid="uid://dx3blvewdub5y" path="res://Game/Player/player_weapon.gd" id="1_ynkp3"]
[ext_resource type="Texture2D" uid="uid://dqqo3x18ncfjl" path="res://Assets/Player Weapons/16x16/RPG Weapon No Outline.png" id="2_swv7n"]
[ext_resource type="Texture2D" uid="uid://crfp683ofdv00" path="res://Assets/Player Weapons/16x16/RPG Weapons Dark Outline.png" id="3_06s5h"]
[ext_resource type="Texture2D" uid="uid://tcrv8ojjmd18" path="res://Assets/Player Weapons/16x16/RPG Weapons Light Outline.png" id="4_8fngq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8xd48"]
atlas = ExtResource("2_swv7n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg5co"]
atlas = ExtResource("3_06s5h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5kyx"]
atlas = ExtResource("4_8fngq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5kyx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xd48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg5co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5kyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xd48")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w8wsr"]
atlas = ExtResource("2_swv7n")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhgie"]
atlas = ExtResource("3_06s5h")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_il23h"]
atlas = ExtResource("4_8fngq")
region = Rect2(224, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_woyp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8wsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhgie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8wsr")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_swv7n"]
atlas = ExtResource("2_swv7n")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_06s5h"]
atlas = ExtResource("3_06s5h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fngq"]
atlas = ExtResource("4_8fngq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xd48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swv7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06s5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fngq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swv7n")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_swv7n"]
radius = 9.0

[node name="PlayerWeapon" type="Node2D"]
script = ExtResource("1_ynkp3")

[node name="Sprites" type="Node2D" parent="."]

[node name="Wooden" type="Node2D" parent="Sprites"]

[node name="Club" type="AnimatedSprite2D" parent="Sprites/Wooden"]
visible = false
sprite_frames = SubResource("SpriteFrames_r5kyx")
autoplay = "default"
frame_progress = 1.0

[node name="BasicBow" type="AnimatedSprite2D" parent="Sprites/Wooden"]
visible = false
sprite_frames = SubResource("SpriteFrames_woyp7")
autoplay = "default"
frame_progress = 0.0840523

[node name="Sword" type="AnimatedSprite2D" parent="Sprites/Wooden"]
visible = false
sprite_frames = SubResource("SpriteFrames_8xd48")
autoplay = "default"

[node name="ContactArea2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactArea2D"]
shape = SubResource("CircleShape2D_swv7n")

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
